# EasyAgent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  feasibility_analysis.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cookbook/: 00_understand_the_agent_loop.py  01_trace_a_research_run.py  02_offline_rag.py  03_batch_evaluation.py  04_scoped_workspace.py  05_agent_as_tool.py  README.md
docs/: agent-composition.md  api.md  capabilities.md  concepts.md  custom-tools.md  evaluation.md  extensions.md  memory.md  quickstart.md  tool-policies.md
examples/: math_assistant.py  research_assistant.py
examples/notebooks/: 01_literature_review.ipynb  02_data_analysis.ipynb  03_local_model_lab.ipynb
src/agentmold/: __init__.py  _version.py  agent.py  cli.py  discovery.py  exceptions.py  experiment.py  experimental.py  loading.py  tool.py
src/agentmold/llm/: __init__.py
src/agentmold/llm/providers/: __init__.py  anthropic_provider.py  ollama_provider.py  openai_provider.py
src/agentmold/memory/: __init__.py
src/agentmold/tools/: __init__.py
src/agentmold/visual/: __init__.py  app.py  codegen.py  graph.py  settings.py  tool_uploads.py  traces.py
src/easyagent/: __init__.py  agent.py  cli.py  exceptions.py  tool.py
src/easyagent/llm/: __init__.py
src/easyagent/llm/providers/: __init__.py  anthropic_provider.py  ollama_provider.py  openai_provider.py
src/easyagent/memory/: __init__.py
src/easyagent/tools/: __init__.py
src/easyagent/visual/: __init__.py  app.py  graph.py
tests/: __init__.py  test_agent.py  test_async_agent.py  test_builtin_tools.py  test_cli.py  test_cookbook.py  test_discovery.py  test_documentation.py  test_experiment.py  test_experimental.py  test_llm.py  test_loading.py  test_memory.py  test_notebooks.py  test_provider_contract.py  test_providers.py  test_run_stream.py  test_tool.py  test_trace.py  test_vector_memory.py  test_visual_codegen.py  test_visual_graph.py  test_visual_settings.py  test_visual_tool_uploads.py  test_visual_traces.py
