[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmold"
version = "0.2.0"
description = "The easiest way to build AI agents in Python — 10 lines of code, zero framework concepts."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "EasyAgent Contributors" },
]
keywords = ["ai", "agent", "llm", "scaffold", "openai", "anthropic", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
deepseek = ["openai>=1.0"]
deepseek-anthropic = ["anthropic>=0.18"]
anthropic = ["anthropic>=0.18"]
ollama = ["ollama>=0.1"]
memory = ["chromadb>=0.4", "numpy>=1.24"]
visual = ["streamlit>=1.30", "streamlit-agraph>=0.0.45"]
all = [
    "openai>=1.0",
    "anthropic>=0.18",
    "ollama>=0.1",
    "chromadb>=0.4",
    "numpy>=1.24",
    "streamlit>=1.30",
    "streamlit-agraph>=0.0.45",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
easyagent = "agentmold.cli:main"
agentmold = "agentmold.cli:main"

[project.urls]
Homepage = "https://github.com/dreamsxin/EasyAgent"
Documentation = "https://github.com/dreamsxin/EasyAgent#readme"
Repository = "https://github.com/dreamsxin/EasyAgent"
Issues = "https://github.com/dreamsxin/EasyAgent/issues"
Changelog = "https://github.com/dreamsxin/EasyAgent/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
