[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmold"
dynamic = ["version"]
description = "Build inspectable AI agents with ordinary Python functions and no workflow DSL."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "EasyAgent Contributors" },
]
keywords = ["ai", "agent", "llm", "scaffold", "openai", "anthropic", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
deepseek = ["openai>=1.0"]
deepseek-anthropic = ["anthropic>=0.18"]
anthropic = ["anthropic>=0.18"]
ollama = ["ollama>=0.1"]
memory = ["chromadb>=0.4", "numpy>=1.24"]
visual = ["streamlit>=1.30", "streamlit-agraph>=0.0.45"]
all = [
    "openai>=1.0",
    "anthropic>=0.18",
    "ollama>=0.1",
    "chromadb>=0.4",
    "numpy>=1.24",
    "streamlit>=1.30",
    "streamlit-agraph>=0.0.45",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0,<2.0",
]

[project.scripts]
easyagent = "agentmold.cli:main"

[project.urls]
Homepage = "https://github.com/dreamsxin/EasyAgent"
Documentation = "https://github.com/dreamsxin/EasyAgent#readme"
Repository = "https://github.com/dreamsxin/EasyAgent"
Issues = "https://github.com/dreamsxin/EasyAgent/issues"
Changelog = "https://github.com/dreamsxin/EasyAgent/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "agentmold._version.__version__"}

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "anthropic",
    "click",
    "chromadb",
    "ollama",
    "openai",
    "streamlit",
    "streamlit_agraph",
]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
